force-app/main/default/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Support Request</fullName>
        <description>Process for support requests created by our Client through our portal.</description>
        <isActive>true</isActive>
        <values>
            <fullName>%3F%3FNew</fullName>
        </values>
        <values>
            <fullName>%3F%3FProposal Provided - To Be Approved</fullName>
        </values>
        <values>
            <fullName>%3F%3FTested KO - To Be Fixed</fullName>
        </values>
        <values>
            <fullName>%3F%3FTested OK - To Be Delivered</fullName>
        </values>
        <values>
            <fullName>%3F%3FTo Be Tested</fullName>
        </values>
        <values>
            <fullName>%3F%3FUnder Analysis</fullName>
        </values>
        <values>
            <fullName>%3F%3FUnder Analysis - Info Requested</fullName>
        </values>
        <values>
            <fullName>%3F%3FUnder Implementation</fullName>
        </values>
        <values>
            <fullName>%E2%9C%85 Closed - Delivered</fullName>
        </values>
        <values>
            <fullName>%E2%9D%8C Closed - Cancelled</fullName>
        </values>
        <values>
            <fullName>%E2%9D%8C Closed - Rejected</fullName>
        </values>
        <values>
            <fullName>%E2%9E%A1%EF%B8%8F Postponed</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ActualResult__c</fullName>
        <description>Actual result observed by the user when following the steps to reproduce.</description>
        <inlineHelpText>Actual result observed by the user when following the steps to reproduce.</inlineHelpText>
        <label>Actual Result</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AlreadyBilledToCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check manually in order to indicates that the Customer was already billed this Support Request</description>
        <inlineHelpText>To check manually in order to indicates that the Customer was already billed this Support Request</inlineHelpText>
        <label>Already Billed to Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <formula>SupportProject__r.Contact__r.FirstName &amp;&apos; &apos;&amp;  SupportProject__r.Contact__r.FirstName</formula>
        <label>Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DesignOption__c</fullName>
        <label>Design Option / Activities</label>
        <length>40000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EnoughManDays__c</fullName>
        <formula>IF(ISPICKVAL(SupportProject__r.Payment_Terms__c , &quot;On Demand&quot;),&quot;Not Applicable for Support Request linked to a project with an On Demand payment terms&quot;,
IF(  TECH_RemainingManDaysExceeded__c  ,  IMAGE(&quot;http://www.myiconfinder.com/uploads/iconsets/256-256-ec140ce32ea8619e2b1dce4fad3b0d48-cross.png&quot;, &quot;Red Cross&quot;, 20, 20) ,  IMAGE(&quot;https://i.imgur.com/n7gOYrE.jpg&quot;, &quot;Green Circle&quot; , 20, 20) ))</formula>
        <label>Enough Man-days for Workload Validation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Result__c</fullName>
        <description>Results expected when following the steps to reproduce.</description>
        <inlineHelpText>Results expected when following the steps to reproduce.</inlineHelpText>
        <label>Expected Result</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Free__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to flag Support Requests not factured to the Customer. These Requests have the &quot;Free&quot; Report Type &amp; Page Layout.</description>
        <label>Free</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NextSteps__c</fullName>
        <label>➡️ Next Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PROTO_OpenDate__c</fullName>
        <description>TO BE DELETED - TECH field for prototype purpose</description>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Procedure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field refers to the procedure that shall be followed in order to solve the request.</description>
        <label>Procedure</label>
        <referenceTo>Procedure__c</referenceTo>
        <relationshipLabel>Support Requests</relationshipLabel>
        <relationshipName>Support_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectPaymentMethod__c</fullName>
        <formula>TEXT(  SupportProject__r.Payment_Terms__c  )</formula>
        <label>Project Payment Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProposedWorkaround__c</fullName>
        <description>To be used by SpringFive to propose a Workaround to Customers in case of high priority defects.</description>
        <label>Proposed Workaround</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QuipDocument__c</fullName>
        <description>Contains the quip document URL attached to this request</description>
        <label>Quip Document</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>QuipTemplate__c</fullName>
        <description>Contains the quip template URL defined in the related procedure.</description>
        <label>Quip Template</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RequestType__c</fullName>
        <description>Defines the type of the Support Request : Defect or Improvement.</description>
        <inlineHelpText>Defines the type of the Support Request : Defect or Improvement.</inlineHelpText>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Defect</fullName>
                    <default>true</default>
                    <label>Defect</label>
                </value>
                <value>
                    <fullName>Improvement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>S5DesignOption__c</fullName>
        <description>Field for SpringFive to formalize the design proposal that resolves the Case opened by the Customer.</description>
        <inlineHelpText>Field for SpringFive to formalize the design proposal that resolves the Case opened by the Customer.</inlineHelpText>
        <label>S5 - Design Option / Activities</label>
        <length>40000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>StepsToReproduce__c</fullName>
        <description>Needed for Customer to qualify the logged defect.</description>
        <inlineHelpText>Needed for Customer to qualify the logged defect.</inlineHelpText>
        <label>Steps To Reproduce</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SupportProjectLeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support Project Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Support_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SupportProject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support Project</label>
        <referenceTo>SupportProject__c</referenceTo>
        <relationshipLabel>Support Requests</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TECH_CaseSteps__c</fullName>
        <description>Case Steps updated by Process Builder CAS_PB06 in order to be displayed in Kanban.</description>
        <label>Phase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Under Analysis</fullName>
                    <label>1️⃣ Qualification</label>
                </value>
                <value>
                    <fullName>Under Implementation</fullName>
                    <color>#FFCC33</color>
                    <label>2️⃣ Implementation</label>
                </value>
                <value>
                    <fullName>Under Test</fullName>
                    <color>#339999</color>
                    <label>3️⃣ Validation</label>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                    <color>#33CC00</color>
                    <label>✅ Delivered</label>
                </value>
                <value>
                    <fullName>Closed Not Delivered</fullName>
                    <label>❌ Closed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TECH_CommunityCaseBaseURL__c</fullName>
        <formula>$Label.CommunityCaseBaseURL</formula>
        <label>TECH_Community Case Base URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_Contact_Salutation_Last_Name__c</fullName>
        <formula>TEXT(Contact.Salutation) &amp;&quot; &quot;&amp; Contact.LastName</formula>
        <label>TECH - Contact Salutation Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_FrozenManDayOnProject__c</fullName>
        <formula>SupportProject__r.TotalFrozenManDay__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH - Frozen Man-days On Project</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_RemainingManDayOnProject__c</fullName>
        <formula>SupportProject__r.RemainingManDaysProject__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH - Remaining Man-days On Project</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_RemainingManDaysExceeded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TECH - Remaining Man-days Exceeded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TECH_RunningUserIsOwner__c</fullName>
        <description>Formula that returns TRUE if the running user is also the project referent user defined for the Support Project that is related to the Support Request. 
Used as a filter in Support Requests List View.</description>
        <formula>IF(  SupportProject__r.ProjectReferent__r.Id =  $User.Id , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech - Running User is Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TECH_SalesforcebasedURL__c</fullName>
        <formula>Source:SocialPost.PostUrl</formula>
        <label>TECH_SalesforcebasedURL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_TotalPrepaidManDaysOnProject__c</fullName>
        <formula>SupportProject__r.manDayPrepaidProject__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH - Total Prepaid Man-days on Project</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Workaroud_Milestone_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When the Checkbox is True, it completes the &quot;Maximum Time before Implementing a Workaround&quot; Milestone.</description>
        <inlineHelpText>Completes the &quot;Maximum Time before Implementing a Workaround&quot; Milestone.</inlineHelpText>
        <label>Workaround Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>manDayBookedLayout__c</fullName>
        <description>Number of Man/day that have been booked for aSupport Request. If the checkbox &quot;Free&quot; is True, it displays &quot;FREE&quot; otherwise it displays the &quot;S5 - Man/day booked&quot; field value. 
Field to be displayed on the Customer Community Layout.</description>
        <formula>IF (  Free__c = TRUE,
0,

IF( ISPICKVAL(Status,&quot;New&quot;) || ISPICKVAL(Status,&quot;TO_BE_QUALIFIED&quot;) || ISPICKVAL(Status,&quot;TO_BE_QUALIFIED_MORE_INFO&quot;),NULL,

IF( ISPICKVAL(Status,&quot;QUALIFIED_TO_BE_APPROVED&quot;) || ISPICKVAL(Status,&quot;TO_BE_IMPLEMENTED&quot;) || ISPICKVAL(Status,&quot;IMPLEMENTED&quot;) || ISPICKVAL(Status,&quot;TESTED_Ok&quot;) || ISPICKVAL(Status,&quot;Tested KO&quot;) || ISPICKVAL(Status,&quot;Delivered&quot;), manDayBooked__c,

IF ( ISPICKVAL(Status,&quot;Rejected&quot;) || ISPICKVAL(Status,&quot;Cancelled&quot;) || ISPICKVAL(Status,&quot;Postponed&quot;), manDayConsumed__c,
null)
)))</formula>
        <inlineHelpText>Number of Man/day that have been booked for this Support Request.</inlineHelpText>
        <label>Estimated workload (Man-days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>manDayBooked__c</fullName>
        <description>The evaluated number man / day needed to handle the Support Request from start to finish. Not displayed on the customer layout.</description>
        <label>S5 - Estimated workload (Man-days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>manDayConsumedLayout__c</fullName>
        <description>Number of Man/day that have been consumed for a Support Request. If the checkbox &quot;Free&quot; is True, it displays &quot;FREE&quot; otherwise it displays the &quot;S5 - Man/day Consumed&quot; field value. 
Field to be displayed on the Customer Community Layout.</description>
        <formula>IF (  Free__c = TRUE,
IMAGE(&quot;https://springfivedev--dev--c.cs84.visual.force.com/resource/1535536629000/FreeStamp?isdtp=p1&quot;, &quot;FREE&quot;, 20,80),

CASE( Status ,
&quot;New&quot;, &quot;N/A&quot;,
&quot;TO_BE_QUALIFIED&quot;, &quot;N/A&quot;,
&quot;TO_BE_QUALIFIED_MORE_INFO&quot;, &quot;N/A&quot;,
&quot;QUALIFIED_TO_BE_APPROVED&quot;, &quot;N/A&quot;,

&quot;TO_BE_IMPLEMENTED&quot;,  TEXT(manDayConsumed__c),
&quot;IMPLEMENTED&quot;, TEXT(manDayConsumed__c),
&quot;TESTED_Ok&quot;, TEXT(manDayConsumed__c ),
&quot;Tested KO&quot;, TEXT(manDayConsumed__c),
&quot;Delivered&quot;, TEXT(manDayConsumed__c),

&quot;Rejected&quot;, TEXT(manDayConsumed__c ),
&quot;Cancelled&quot;, TEXT(manDayConsumed__c ),
&quot;Postponed&quot;, &quot;N/A&quot;,

null)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of Man/day that have been consumed for this Support Request.</inlineHelpText>
        <label>Number of Man-days Consumed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>manDayConsumed__c</fullName>
        <description>Number of man / day chargeable. Not displayed on the customer layout.</description>
        <label>Number of Man-days Consumed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>manDayBookedLayout__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TECH_CaseSteps__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Open Support Requests - Kanban</label>
    </listViews>
    <listViews>
        <fullName>All_Closed_Support_Requests</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>SupportProject__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>manDayBookedLayout__c</columns>
        <columns>NAME</columns>
        <columns>OWNER_NAME</columns>
        <columns>RequestType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Support Requests</label>
    </listViews>
    <listViews>
        <fullName>All_SpringFive_Defects_only</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Defect</value>
        </filters>
        <label>All SpringFive - Defects only</label>
        <queue>All_SpringFive</queue>
        <sharedTo>
            <roleAndSubordinatesInternal>CEO</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SupportAgent</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Associates_Case</fullName>
        <columns>SupportProject__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Queue</filterScope>
        <label>All SpringFive</label>
        <queue>All_SpringFive</queue>
        <sharedTo>
            <roleAndSubordinatesInternal>CEO</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SupportAgent</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Caocao_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>Caocao Mobility Paris</value>
        </filters>
        <label>Caocao</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GROHE_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>GROHE</label>
        <queue>GROHE</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Grohe_Pending</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,TO_BE_QUALIFIED,TO_BE_QUALIFIED_MORE_INFO,QUALIFIED_TO_BE_APPROVED,TO_BE_IMPLEMENTED,IMPLEMENTED,TESTED_Ok,TESTED KO</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>GROHE S.a.r.l.</value>
        </filters>
        <label>Grohe Pending</label>
        <sharedTo>
            <role>SupportAgent</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Team</filterScope>
        <label>My Support Requests</label>
        <sharedTo>
            <role>CEO</role>
            <roleAndSubordinatesInternal>SupportAgent</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>My_Opened_Support_Requests</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Support Requests</label>
        <sharedTo>
            <role>CEO</role>
            <role>SupportAgent</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OpenSupportRequestsList</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>SupportProject__c</columns>
        <columns>RequestType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Open Support Requests - List</label>
    </listViews>
    <listViews>
        <fullName>PendingCustomerAction</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>SupportProject__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>TO_BE_QUALIFIED_MORE_INFO,QUALIFIED_TO_BE_APPROVED,IMPLEMENTED</value>
        </filters>
        <label>All Pending Action Requests</label>
    </listViews>
    <recordTypes>
        <fullName>Defect</fullName>
        <active>true</active>
        <businessProcess>Support Request</businessProcess>
        <label>Defect</label>
    </recordTypes>
    <recordTypes>
        <fullName>Improvement</fullName>
        <active>true</active>
        <businessProcess>Support Request</businessProcess>
        <label>Improvement</label>
    </recordTypes>
    <recordTypes>
        <fullName>SupportTask</fullName>
        <active>true</active>
        <businessProcess>Support Request</businessProcess>
        <label>Support Task</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CAS_VR01_ForbiddenStatusesForCustomer</fullName>
        <active>true</active>
        <errorConditionFormula>( ISCHANGED(Status)  ||  ISNEW() ) &amp;&amp;
($Profile.Name = &apos;TMA Customer&apos;) &amp;&amp; 
NOT($User.BypassVR__c) &amp;&amp;
OR(
ISPICKVAL(Status, &apos;New&apos;) &amp;&amp; NOT(ISPICKVAL(PRIORVALUE(Status),&apos;New&apos;)),
ISPICKVAL(Status, &apos;TO_BE_QUALIFIED&apos;) &amp;&amp; NOT(ISPICKVAL(PRIORVALUE(Status),&apos;QUALIFIED_TO_BE_APPROVED&apos;)),
ISPICKVAL(Status,&apos;TO_BE_QUALIFIED_MORE_INFO&apos;),
ISPICKVAL(Status,&apos;QUALIFIED_TO_BE_APPROVED&apos;),
ISPICKVAL(Status,&apos;TO_BE_IMPLEMENTED&apos;) &amp;&amp; NOT(ISPICKVAL(PRIORVALUE(Status),&apos;QUALIFIED_TO_BE_APPROVED&apos;)),
ISPICKVAL(Status,&apos;IMPLEMENTED&apos;),
ISPICKVAL(Status,&apos;TESTED_Ok&apos;) &amp;&amp; NOT(ISPICKVAL(PRIORVALUE(Status),&apos;IMPLEMENTED&apos;)),
ISPICKVAL(Status,&apos;Tested KO&apos;) &amp;&amp; NOT(ISPICKVAL(PRIORVALUE(Status),&apos;IMPLEMENTED&apos;)),
ISPICKVAL(Status,&apos;Delivered&apos;),
ISPICKVAL(Status,&apos;Rejected&apos;),
ISPICKVAL(Status,&apos;Postponed&apos;)
)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>Sorry, this Status value can only be picked by the SpringFive Support Team.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CAS_VR02_InsufficientManDays</fullName>
        <active>true</active>
        <description>The system must automatically prevent the user from creating a support request if he has not enough remaining days.</description>
        <errorConditionFormula>AND(
(ISNEW() || ISCHANGED(Status) || ISCHANGED( manDayBooked__c )),
 NOT($User.BypassVR__c),
 NOT( Free__c ),
 ISPICKVAL(SupportProject__r.Payment_Terms__c, &quot;Pre-Paid&quot;),   
 (SupportProject__r.manDayPrepaidProject__c  -  (SupportProject__r.manDayConsumed__c) )   &lt; SupportProject__r.MinimumBillableDay__c
)</errorConditionFormula>
        <errorMessage>The Remaining Days are not sufficient to go through the Support Request. Please contact a SpringFive agent in order to recredit your account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CAS_VR03_NoWorkloadModifAfterApproval</fullName>
        <active>true</active>
        <errorConditionFormula>NOT($User.BypassVR__c) &amp;&amp;
OR(
ISPICKVAL(Status,&quot;TO_BE_IMPLEMENTED&quot;),
ISPICKVAL(Status,&quot;IMPLEMENTED&quot;),
ISPICKVAL(Status,&quot;TESTED_Ok&quot;),
ISPICKVAL(Status,&quot;Tested KO&quot;),
ISPICKVAL(Status,&quot;Delivered&quot;),
ISPICKVAL(Status,&quot;Cancelled&quot;),
ISPICKVAL(Status,&quot;Postponed&quot;),
ISPICKVAL(Status,&quot;Rejected&quot;)) 
&amp;&amp; 
OR(  
PRIORVALUE( manDayBooked__c )  &lt;&gt; manDayBooked__c,
PRIORVALUE(  S5DesignOption__c  )  &lt;&gt; S5DesignOption__c,
PRIORVALUE(   DesignOption__c   )  &lt;&gt; DesignOption__c
)</errorConditionFormula>
        <errorMessage>The Estimation provided and the Design Options cannot be changed when the Support Request has the current Status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CAS_VR05_ProposalProvidedBlankEstimated</fullName>
        <active>true</active>
        <description>The system must autoamtically prevent a user from selecting the status &quot;Proposal Provided - To Be Approved&quot; if the estimated workload field is blank.</description>
        <errorConditionFormula>AND(
 NOT($User.BypassVR__c),
 ISCHANGED( Status ),
 ISPICKVAL( Status , &quot;QUALIFIED_TO_BE_APPROVED&quot;),
 NOT( Free__c ),
 ISBLANK( manDayBooked__c )
)</errorConditionFormula>
        <errorDisplayField>manDayBooked__c</errorDisplayField>
        <errorMessage>You must enter a value on the estimated workload field in order to provide the proposal.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CSP_VR06_InsufficientManDaysToValidate</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT($User.BypassVR__c), 
NOT( Free__c ),
ISPICKVAL(SupportProject__r.Payment_Terms__c, &quot;Pre-Paid&quot;), 
OR(
( (SupportProject__r.manDayPrepaidProject__c - SupportProject__r.manDayConsumed__c &lt;  0 ) &amp;&amp; ISPICKVAL(Status, &quot;TO_BE_IMPLEMENTED&quot;) ),
( (SupportProject__r.manDayPrepaidProject__c - SupportProject__r.manDayConsumed__c - manDayBooked__c &lt; 0 ) &amp;&amp; ISPICKVAL(Status, &quot;QUALIFIED_TO_BE_APPROVED&quot;) )
)
)</errorConditionFormula>
        <errorMessage>The remaining days are not sufficient to validate the estimation of this Support Request.</errorMessage>
    </validationRules>
</CustomObject>